Fix scrollable area on sidebar file list (#3)
* Make scrollable area on sidebar not include the top controls area. Previously it covered the top of the scrollbar and made it hard to scroll on very large fileset.

* Removing an unused feature css

* Oops, there was actually a much easier CSS fix than what I did. Reverting and recommitting a better fix.

* Fixing bottom of scrollbar extending outside of page bottom

* Controls box flickered when hovering over files list with previous fix, due to it being position fixed inside the #sidebar div with a top margin. Better fix is to put controls div outside of sidebar, by itself as a position fixed element.

* Accidentally committed unfinished feature code.

--- a/styles.css
+++ b/styles.css
@@ -170,18 +170,7 @@ a:hover, a:active {
   top: 1px;
 }
 
-#sidebar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 1;
-  width: 250px;
-  height: 100%;
-  overflow: auto;
-  border-right: 1px solid #DCE0E3;
-}
-#sidebar .controls {
+.controls {
   position: fixed;
   top: 0;
   left: 0;
@@ -197,18 +186,29 @@ a:hover, a:active {
      -moz-box-shadow: 0px 1px 1px rgba(0,0,0,0.07);
           box-shadow: 0px 1px 1px rgba(0,0,0,0.07);
 }
-#sidebar .logout { 
+.controls .logout { 
   float: left; 
   margin-top: 5px;
 }
-#sidebar .controls .new, .commitbutton, .savebutton, .pushpullbutton, .clearcachebutton { 
+.controls .new, .commitbutton, .savebutton, .pushpullbutton, .clearcachebutton { 
   float: right; 
   margin-top: 5px;
+}
+#sidebar {
+  position: absolute;
+  top: 37px;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+  width: 250px;
+  height: auto;
+  overflow: auto;
+  border-right: 1px solid #DCE0E3;
 }
 #sidebar .nav0 {
   background: #f4f5f6;
   list-style: none;
-  margin: 37px 0 0 0;
+  margin: 0;
   padding: 0;
 }
 #sidebar .nav {
